    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/??  richardjgowers, IAlibay, tylerjereddy, xiki-tempula, lilyminium

  * 1.1.0

Fixes
  * Replaces decreated NumPy type aliases and fixes NEP 34 explicit ragged
    array warnings (PR #3139, backports PRs #2845 and #2834)
  * Fixed several issues with NSGrid and triclinic boxes not finding some pairs.
    (Issues #2229 #2345 #2919, PR #2937).

Changes
  * Maximum pinned versions in setup.py removed for python 3.6+ (PR #3139)

Deprecations
  * Deprecated tempfactors and bfactors being separate
    TopologyAttrs, with a warning (PR #3161)
  * hbonds.WaterBridgeAnalysis will be removed in 2.0.0 and
    replaced with hydrogenbonds.WaterBridgeAnalysis (#3111)
  * TPRParser indexing resids from 0 by default is deprecated.
    From 2.0 TPRParser will index resids from 1 by default.

Enhancements
  * Added `tpr_resid_from_one` keyword to select whether TPRParser
    indexes resids from 0 or 1 (Issue #2364, PR #3153)
  
    
01/17/21 richardjgowers, IAlibay, orbeckst, tylerjereddy, jbarnoud,
         yuxuanzhuang, lilyminium, VOD555, p-j-smith, bieniekmateusz,
         calcraven, ianmkenney, rcrehuet, manuel.nuno.melo, hanatok

  * 1.0.1

Fixes
  * Due to issues with the reliability/accuracy of `nsgrid`, this method is
    currently not recommended for use. It has also been removed as an option
    from lib.capped_distance and lib.self_capped_distance. Please use PKDTree
    instead (Issue #2930)
  * Development status changed from beta to mature (Issue #2773)
  * pip installation only requests Python 2.7-compatible packages (#2736)
  * Testsuite does not use any more matplotlib.use('agg') (#2191)
  * The methods provided by topology attributes now appear in the
    documentation (Issue #1845)